# mktwo

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mktwo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_matcher.cpp  native-lib.cpp
app/src/main/java/com/example/mktwo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mktwo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
